# brent-oil-change-point-analysis

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: unittests.yml
backend/: README.md  app.py
data/: README.md
data/raw/: key_events.csv
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
notebooks/: 01_eda.ipynb  02_change_point_model.ipynb  README.md
reports/: assumptions_and_limitations.md  final_report.html  interim_report.html  model_results.json  task1_analysis_workflow.md  task2_modeling_plan.md
scripts/: README.md  build_final_report.py  build_report.py  capture_dashboard_views.py  run_change_point.py
src/: change_point_model.py  data_loader.py  eda.py  exceptions.py  logging_utils.py
tests/: test_change_point_model.py  test_data_loader.py  test_eda.py
